# si-tyre-analyzer

./: .clang-format  .gitignore  .release-please-manifest.json  CHANGELOG.md  LICENSE  README.md  extra_script.py  partitions.csv  platformio.ini  release-please-config.json
.github/: CODEOWNERS  dependabot.yml
.github/codeql/: codeql-config.yml
.github/linters/: .clang-format  .codespellrc  .markdown-lint.yml  .mypy.ini  .powershell-psscriptanalyzer.psd1  .python-lint  .ruff.toml
.github/workflows/: codeql.yml  dependabot-title.yml  lint.yml  release.yml  test.yml
.validate/: run_checks.cpp
docs/: colour-scale.md  dash-gauge.md  mounting.md  testing.md  updating.md
lib/Adafruit_MLX90640/: Adafruit_MLX90640.cpp  Adafruit_MLX90640.h  library.properties
src/: main.cpp
src/config/: DeviceConfig.h  Settings.cpp  Settings.h
src/controllers/: EspNowController.cpp  EspNowController.h  (+4 more)
tools/: CHANGELOG.md  config_preview.html  live_preview.html  make_demo_run.py  make_macos_app.py  mock_live_server.py  pyproject.toml  tft_preview.html
tools/install/: install.ps1  install.sh
tools/si_tyre_analyzer/: __init__.py  cli.py  constants.py  fetch.py  heatmap.py  lapdata.py  logreader.py  timeseries.py
tools/si_tyre_analyzer/gui/: __init__.py  app.py  colors.py  firmware.py  heatmap_widget.py  iconize.py  icons.py  macapp.py  meta.py  metadialog.py  net.py  prefs.py  runs.py  theme.py  update.py  widgets.py
tools/si_tyre_analyzer/gui/pages/: __init__.py  analysis.py  library.py  live.py  viewer.py
tools/tests/: test_lapdata.py  test_logreader.py  test_update.py
(+35 files in other folders)
