[project]
name = "si-tyre-analyzer"
version = "0.5.1"
description = "View and analyse tyre temperature recordings from SI Tyre Analyzer"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "requests>=2.31",
    "PySide6>=6.6",
]

[project.scripts]
sita = "si_tyre_analyzer.cli:main"

[project.gui-scripts]
si-tyre-analyzer = "si_tyre_analyzer.gui.app:main"

[dependency-groups]
dev = ["pytest>=9.1.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["si_tyre_analyzer"]
